--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/main/app.js",
   "scripts": {
     "dev": "NODE_ENV=development node tasks/dev",
-    "bundle": "webpack --config ./webpack/build.config.js",
+    "build": "webpack --config ./webpack/build.config.js",
     "test": "eslint ."
   },
   "author": "AlexKvazos",
